// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metatext snapshots Metatext: 0 1`] = `
<span
  className="typography-0-1-1 typography__7-0-1-8 metatext-0-1-11"
>
  Metatext test string
</span>
`;

exports[`metatext snapshots Metatext: 1 1`] = `
<p
  className="typography-0-1-1 typography__7-0-1-8 metatext-0-1-11"
  data-sketch-symbol="Metatext"
>
  Metatext test string
</p>
`;

exports[`metatext snapshots Metatext: 2 1`] = `
<span
  className="typography-0-1-1 typography__7-0-1-8 metatext-0-1-11"
>
  Metatext test string
</span>
`;
